    Fixed: Enforce TLS v1.2 as older versions are not longer considered safe (Apache2)
    Security: Protect both /var/www/virtual and /var/www/imscp directories from full access (Apache2)
    Review: SSL parameters for both Apache2 and Nginx Web servers (cipher suite)
    Review: Do not discard paths other than '/errors/' and '/.well-known/acme-challenge/' on redirect/proxy (Apache2)

CONTRIB
    Fixed: Possible duplicate DNS zone entry leading to server crash (Slave DNS server - 10_named_slave_provisioning.pl listener file)
    Fixed: Prevent uninstallation of the libsasl2-modules package (10_postfix_smarthost.pl listener file)

DISTRIBUTION
    Added: Support for MariaDB server 10.3 (all distributions)
    Added: Support for Ubuntu Bionic Beaver (18.04) LTS
    Added: PHP 7.2 as PHP alternative (Only selectable for the clients) -- See the errata file for further details

FRONTEND
    Fixed: Closing button being removed in all dialog UI while it must be removed only in alert and confirmation dialogs
    Fixed: Couldn't execute /usr/local/lib/imscp_panel/imscp_panel_reopenlogs logrotate script
    Fixed: $ORIGIN value is empty in Custom DNS records edit UI
    Fixed: Prevent edition of custom DNS records which are not owned by the custom DNS feature

INSTALLER
    Fixed: 'CLIENT_DOMAIN_ALT_URLS' configuration parameter reseted to 0 (disabled) while running installer (Fix backported from 1.6.x branch)
    Fixed: 'CLIENT_DOMAIN_ALT_URLS' parameter is not set on fresh installations (Fix backported from 1.6.x branch)
    Fixed: DIRMNGR(8) daemon not being terminated when expected (APT key management -- Debian adapter; Fix backported from 1.6.x branch)
    Fixed: "Missing or bad entry found in your preseed file" due to unhandled space separator (Slave DNS server)

PACKAGES
    Removed: Net2ftp package. See the errata file for further explanation.

PLUGINS
    Updated: API version to 1.5.1

TOOLS