@@ -22,6 +22,7 @@ CONFIG
     Review: Do not discard paths other than '/errors/' and '/.well-known/acme-challenge/' on redirect/proxy (Apache2)
 
 CONTRIB
+    Added: i-MSCP Slave Server Provisioning client (contrib/scripts/named_slave_provisioning_client.pl)
     Fixed: Possible duplicate DNS zone entry leading to server crash (Slave DNS server - 10_named_slave_provisioning.pl listener file)
     Fixed: Prevent uninstallation of the libsasl2-modules package (10_postfix_smarthost.pl listener file)
 
